<resources>
    <string name="app_name">Voyage de rêve</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="nav_header_title">Voyage de rêve</string>
    <string name="nav_header_subtitle">github.com/IIA-VolService/ApiVoyage</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Paramètres</string>
    <string name="txt_contact_us">Nous contacter</string>
    <string name="txt_github">Github</string>
    <string name="txt_contact_thanks">Merci d\'avoir téléchargé \'Voyage de rêve\' !</string>
    <string name="txt_contact_send_mail">Nous envoyer un mail</string>
    <string name="txt_contact_mail">t.neveux.du.geniebre@iia-laval.fr</string>
    <string name="txt_contact_gitlink">"https://github.com/IIA-VolService/ApiVoyage"</string>
    <string name="txt_contact_sujet">Sujet</string>
    <string name="txt_contact_content">Contenu du mail...</string>
    <string name="txt_contact_sending">Envoi du mail...</string>
    <string name="txt_contact_no_mail_app">Vous n\'avez pas d\'application de mailing</string>
    <string name="txt_menu_flight">Choisir un vol</string>
    <string name="txt_menu_hostel">Réserver un hotêl</string>
    <string name="txt_menu_rent_a_car">Louer une voiture</string>
    <string name="txt_menu_help">Aide</string>
    <string name="txt_menu_contact">Contact</string>
    <string name="txt_menu_other">Autres</string>

    <string name="txt_flight_list_title">Choisissez un vol</string>
    <string name="txt_flight_btn_select_aller">Sélectionner aller</string>
    <string name="txt_flight_btn_select_retour">Sélectionner retour</string>

    <string name="txt_btn_valid">Valider</string>
    <string name="txt_btn_select">Réserver</string>
    <string name="txt_btn_back">Retour</string>

    <string name="txt_help_subtitle01">Réserver un vol</string>
    <string name="txt_help_subtitle02">Réservez un hôtel et une voiture</string>
    <string name="txt_help_text01">Cette application vous permet d\'effectuer une recherche sur les vols disponibles et de réserver vos places pour ce vol.</string>
    <string name="txt_help_text02">Vous pouvez en plus réserver un hôtel ou louer une voiture à la destination souhaitée !</string>
    <string name="txt_help_boldtext01">Pour cela utiliser l\'action \'Chosir son vol\'</string>
    <string name="txt_help_boldtext02">Pour cela utiliser l\'action \'Réserver un hôtel\' et \'Louer une voiture\'</string>

    <string name="txt_frg_flight_error_checkbox">Veuillez sélectionner une catgorie</string>
    <string name="txt_frg_flight_error_champs_invalides">Veuillez remplir tous les champs</string>

    <string name="txt_toast_success">La réservation a été effectuée.</string>
    <string name="txt_toast_aller_isok">L\'aller est validé.</string>

    <string name="txt_hostel_list_title">Choisissez un hôtel</string>
    <string name="txt_car_list_title">Choisissez un véhicule</string>

    <string name="txt_thx">Merci d\'avoir réservé en utilisant l\'application : \n\nUn voyage de rêve</string>



</resources>
