<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flight"
            android:icon="@drawable/ic_flight"
            android:title="@string/txt_menu_flight" />
        <item
            android:id="@+id/nav_hostel"
            android:icon="@drawable/ic_hostel"
            android:title="@string/txt_menu_hostel" />

        <item
            android:id="@+id/nav_rent_a_car"
            android:icon="@drawable/ic_rent_a_car"
            android:title="@string/txt_menu_rent_a_car" />
    </group>

    <item android:title="@string/txt_menu_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/txt_menu_settings" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/txt_menu_contact" />
        </menu>
    </item>

</menu>
